--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,18 +1,19 @@
 backend:
   name: github
-  repo: abdulrhman-aas/my-store  # استبدل باسم المستخدم والمستودع الخاص بك
+  repo: abdulrhman-aas/my-store  # استبدل باسم المستخدم واسم المستودع لديك
+  branch: main
 
-media_folder: "images/uploads"
+media_folder: "images/uploads"   # المكان الذي تُرفع فيه الصور
 public_folder: "/images/uploads"
 
 collections:
   - name: "products"
-    label: "Products"
-    folder: "products"       # كل ملف Markdown يمثل منتج
+    label: "الهواتف"
+    folder: "products"
     create: true
     slug: "{{slug}}"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Description", name: "description", widget: "text" }
-      - { label: "Price", name: "price", widget: "number" }
-      - { label: "Image", name: "image", widget: "image" }
+      - { label: "العنوان", name: "title", widget: "string" }
+      - { label: "الوصف", name: "description", widget: "text" }
+      - { label: "السعر", name: "price", widget: "number" }
+      - { label: "الصورة", name: "image", widget: "image" }
